--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
+    <div id="wrapper">
+      <header>
+        <h1>Welcome to <span class="tba">open house address</span></h1>
+      </header>
+      <main>
 
-    </header>
+      </main>
+      <footer></footer>
+    </div>
   </body>
 </html>
